sumo/tests/sumo/output/e3/errors/lane_empty__entry/errors.sumo
Error: Attribute 'lane' in definition of e3-detector/entry '4/1to3/1' is empty.
Quitting (on error).
